Fix light mode dark mode text

--- a/src/index.css
+++ b/src/index.css
@@ -321,7 +321,7 @@ body.dark .text-decoration-light.active {
 .lightdark {
 	position: fixed;
 	left: var(--pad);
-	bottom: 1px;
+	bottom: 0px;
 	z-index: 10;
 }
 
